[tool.poetry]
name = "pill-detection-server"
version = "0.1.0"
description = ""
authors = ["Hepheir <hepheir@gmail.com>"]
readme = "README.md"
packages = [{include = "pill_detection_server"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
