[tool.poetry]
name = "pill-detection-server"
version = "0.1.0"
description = ""
authors = ["Hepheir <hepheir@gmail.com>"]
readme = "README.md"
packages = [{include = "pill_detection_server"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
opencv-python = "^4.8.0.74"
numpy = "^1.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
